fix: video's alignment

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ html {
 video {
   width: 100%;
   height: auto;
-  margin: 16px 8px;
 }
 
 body {
@@ -13,4 +12,8 @@ body {
   padding: 20px 0;
   background-color: azure;
   min-height: 100%;
+}
+
+.video-container {
+  padding: 16px 8px;
 }
